Actualización de cambios en la configuración CORS y otros ajustes

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -87,8 +87,8 @@
 					<p>¡Bienvenido de nuevo!</p>
 				</div>
 				<form class="login__formulario" id="login__form">
-					<input name="email" type="text" placeholder="Correo electrónico" />
-					<input name="password" type="password" placeholder="Contraseña" />
+					<input name="email" type="text" placeholder="Correo electrónico" required />
+					<input name="password" type="password" placeholder="Contraseña" required />
 					<div class="login__button--container">
 						<button type="submit">Ingresar</button>
 					</div>
