--- a/public/views/login.html
+++ b/public/views/login.html
@@ -16,7 +16,7 @@
 		<header class="header">
 			<nav class="header__nav">
 				<div class="header__logo--container">
-					<a class="header__logo" href="index.html"><img src="/images/Logo.png" alt="" /></a>
+					<a class="header__logo" href="/index.html"><img src="/images/Logo.png" alt="" /></a>
 				</div>
 				<div class="header__nav--container">
 					<div class="header__text--container">
