--- a/public/views/login.html
+++ b/public/views/login.html
@@ -92,7 +92,7 @@
 					<div class="login__button--container">
 						<button type="submit">Ingresar</button>
 					</div>
-					<p>¿Aún no tienes cuenta? <a href="signup.html">Registrate aquí</a></p>
+					<p>¿Aún no tienes cuenta? <a href="/signup.html">Registrate aquí</a></p>
 				</form>
 			</div>
 			<dialog id="signup__modal" class="ventana__modal--container">
